--- a/todo/style.css
+++ b/todo/style.css
@@ -56,11 +56,10 @@ ul {
     margin-left:25px;
 }
 
-li {
+li:before {
     line-height:1.5;
-    li:before {
     content: "• ";
-    color: red; /* or whatever color you prefer */
+    color: red;
 }
 
 h2 {
